--- a/src/Catty/Storyboard+XIB/FormulaEditor.xib
+++ b/src/Catty/Storyboard+XIB/FormulaEditor.xib
@@ -1148,7 +1148,7 @@
                             <rect key="frame" x="0.0" y="217" width="82" height="43"/>
                             <color key="backgroundColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <state key="normal" title="rand">
+                            <state key="normal" title="random">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
