--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -1416,7 +1416,7 @@
         <!--Search Store View Controller-->
         <scene sceneID="FTZ-2Z-KbS">
             <objects>
-                <viewController id="gUe-7f-4Ts" customClass="SearchStoreViewController" sceneMemberID="viewController">
+                <viewController id="gUe-7f-4Ts" customClass="SearchStoreViewController" customModule="Pocket_Code" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ung-cw-cbv"/>
                         <viewControllerLayoutGuide type="bottom" id="NrY-Yp-4I6"/>
@@ -1425,7 +1425,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" text="" translatesAutoresizingMaskIntoConstraints="NO" id="2Ht-uC-rkW">
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" text="" translatesAutoresizingMaskIntoConstraints="NO" id="2Ht-uC-rkW">
                                 <rect key="frame" x="0.0" y="64" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -1436,7 +1436,7 @@
                                 <rect key="frame" x="0.0" y="120" width="375" height="498"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImageCell" rowHeight="79" id="pKA-7M-1Hn" customClass="DarkBlueGradientImageCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchCell" rowHeight="79" id="pKA-7M-1Hn" customClass="SearchStoreCell" customModule="Pocket_Code" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="22" width="375" height="79"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pKA-7M-1Hn" id="kSt-1q-BiB">
@@ -1473,8 +1473,8 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="iconImageView" destination="idW-ZC-ZwS" id="oVa-Py-qN1"/>
-                                            <outlet property="titleLabel" destination="F3H-t7-Eut" id="vke-5A-UYs"/>
+                                            <outlet property="searchProgramImage" destination="idW-ZC-ZwS" id="p3D-HM-xtq"/>
+                                            <outlet property="searchProgramTitle" destination="F3H-t7-Eut" id="zY8-OS-8No"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1501,8 +1501,8 @@
                     <tabBarItem key="tabBarItem" systemItem="search" id="f0u-I2-K26"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics" barStyle="black"/>
                     <connections>
-                        <outlet property="searchBar" destination="2Ht-uC-rkW" id="HTV-Fh-pm8"/>
-                        <outlet property="tableView" destination="wOw-Ve-PBF" id="W3e-9D-HCI"/>
+                        <outlet property="SearchStoreTableView" destination="wOw-Ve-PBF" id="UpX-nm-JZa"/>
+                        <outlet property="searchBar" destination="2Ht-uC-rkW" id="PZ9-ZW-OxV"/>
                         <segue destination="5oV-85-Xov" kind="show" identifier="segueToProgramDetail" id="Gbh-WU-doT"/>
                     </connections>
                 </viewController>
@@ -1659,7 +1659,7 @@
         <!--Charts-->
         <scene sceneID="SIN-nq-kFT">
             <objects>
-                <viewController id="NKa-LQ-PR2" customClass="RecentProgramsStoreViewController" sceneMemberID="viewController">
+                <viewController id="NKa-LQ-PR2" customClass="ChartProgramsStoreViewController" customModule="Pocket_Code" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oUZ-xk-9ov"/>
                         <viewControllerLayoutGuide type="bottom" id="LnA-7Y-Ybh"/>
@@ -1675,12 +1675,15 @@
                                     <segment title="2"/>
                                     <segment title="3"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentTapped:" destination="NKa-LQ-PR2" eventType="valueChanged" id="POq-TJ-J5r"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fJr-Rh-VKf">
                                 <rect key="frame" x="0.0" y="93" width="375" height="525"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImageCell" rowHeight="79" id="pIz-Fj-Dju" customClass="DarkBlueGradientImageCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImageCell" rowHeight="79" id="pIz-Fj-Dju" customClass="ChartProgramCell" customModule="Pocket_Code" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="22" width="375" height="79"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pIz-Fj-Dju" id="q6e-Z0-ush">
@@ -1717,8 +1720,8 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="iconImageView" destination="mCK-b7-9dt" id="QBZ-AN-2co"/>
-                                            <outlet property="titleLabel" destination="8c6-q5-WBJ" id="yIa-Ey-elj"/>
+                                            <outlet property="chartProgramImage" destination="mCK-b7-9dt" id="ypv-oU-cQN"/>
+                                            <outlet property="chartProgramTitle" destination="8c6-q5-WBJ" id="wxk-KZ-Wic"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1737,8 +1740,8 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Charts" image="top_charts" id="cyM-fk-ZFD"/>
                     <connections>
-                        <outlet property="downloadSegmentedControl" destination="jxg-mt-dvB" id="2Ib-94-qEx"/>
-                        <outlet property="tableView" destination="fJr-Rh-VKf" id="1cb-fm-aRb"/>
+                        <outlet property="ChartProgramsSegmentedControl" destination="jxg-mt-dvB" id="bR1-Hf-UdL"/>
+                        <outlet property="ChartProgramsTableView" destination="fJr-Rh-VKf" id="9mV-oM-UFt"/>
                         <segue destination="5oV-85-Xov" kind="show" identifier="segueToProgramDetail" id="5UD-6W-Ykq"/>
                     </connections>
                 </viewController>
@@ -2521,7 +2524,7 @@
         <image name="top_charts" width="25" height="23"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="83p-dA-kpt"/>
-        <segue reference="mUB-CR-2KD"/>
+        <segue reference="Gbh-WU-doT"/>
+        <segue reference="Ynr-aF-UI3"/>
     </inferredMetricsTieBreakers>
 </document>
